update the musc page

--- a/src/pages/mdas/musculardystrophyassociation.html
+++ b/src/pages/mdas/musculardystrophyassociation.html
@@ -111,18 +111,18 @@
         <p>information on subsidy scheme</p>
         <div class="checkboxGroup">
             <label class="labelText">Purpose of Transport Subsidy:</label>
-            <label class="labelText"><input type="checkbox" name="sectionC_PurposeTransport" id="sectionC_PurposeTransportSchooling" value="Yes"> for Schooling</label>
-            <label class="labelText"><input type="checkbox" name="sectionC_PurposeTransport" id="sectionC_PurposeTransportMedical" value="No"> for Medical Consultation</label>
+            <label class="labelText"><input type="checkbox" name="sectionC_PurposeTransport" id="sectionC_PurposeTransportSchooling" value="for Schooling"> for Schooling</label>
+            <label class="labelText"><input type="checkbox" name="sectionC_PurposeTransport" id="sectionC_PurposeTransportMedical" value="for Medical Consultation"> for Medical Consultation</label>
         </div>
         <div class="">
             <div class="labelText">Mode of transport</div>
             <div class="checkboxGroup">
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportTaxi" value="Yes"> Taxi with hydraulic lift/ramp</label>
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportMDAS" value="No"> MDAS vehicle</label>
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportRegular" value="Yes">  Regular taxi</label>
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportVehicle" value="No"> Vehicle with hydraulic lift/ramp</label>
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOtherAgency" value="Yes"> Other Agency’s vehicle</label>
-                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportAmbulance" value="No"> Ambulance</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportTaxi" value="Taxi with hydraulic lift/ramp"> Taxi with hydraulic lift/ramp</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportMDAS" value="MDAS vehicle"> MDAS vehicle</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportRegular" value="Regular taxi">  Regular taxi</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportVehicle" value="Vehicle with hydraulic lift/ramp"> Vehicle with hydraulic lift/ramp</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOtherAgency" value="Other Agency’s vehicle"> Other Agency’s vehicle</label>
+                <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportAmbulance" value="Ambulance"> Ambulance</label>
                 <label class="labelText"><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOthers" data-form-other="sectionC_ModeTransportOtherText" value="Others"> Others (pls specify) </label>
                 <input type="text" id="sectionC_ModeTransportOtherText" name="sectionC_ModeTransportOtherText" disabled="disabled" placeholder="Others (pls specify)" data-form-other-text="true" />
 
@@ -278,7 +278,7 @@
             <span>This financial assistance is open to members with Muscular Dystrophy to help them ease the high transportation costs in order to attend school and/or attend medical appointments.  The approved subsidy is valid for one calendar year.  Members may submit their application for subsequent year, subject to availability of funds.</span><br>
             <span>Interested members could apply for subsidy for the following purposes</span><br>
             <span>&nbsp;&nbsp;1)&nbsp;&nbsp;attending school by using vehicle with hydraulic lift; or</span><br>
-            <span>&nbsp;&nbsp;2)&nbsp;&nbsp;attending medical appointments for muscular dystrophy or its related complications as certified by the medical &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;doctor.</span>
+            <span>&nbsp;&nbsp;2)&nbsp;&nbsp;attending medical appointments for muscular dystrophy or its related complications as certified by the medical doctor.</span>
         </label>
         <br><br>
         <label class="labelText">
@@ -287,12 +287,12 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <font size="4">MTransport for Schooling</font>
             </span><br>
-            <span>1. Application is open to members with Muscular Dystrophy who are attending mainstream school or special education &nbsp;&nbsp;&nbsp;&nbsp;school and require traveling in taxi or vehicle with hydraulic lift/ramp due to the condition.</span><br>
+            <span>1. Application is open to members with Muscular Dystrophy who are attending mainstream school or special education school and require traveling in taxi or vehicle with hydraulic lift/ramp due to the condition.</span><br>
             <span>2. MDAS may consider referring applicant to SG Enable for full/partial transport subsidy.</span><br>
             <span>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.</span><br>
             <span>4. Applicant must be member of MDAS with no arrears of membership subscription fees.</span><br>
             <span>5. Application is subject to Committee’s decision, of which, the decision is final.</span><br>
-            <span>6. Successful applicant must submit their monthly claim by 7th of the following month together with original receipts of &nbsp;&nbsp;&nbsp;&nbsp;transport cost.</span><br>
+            <span>6. Successful applicant must submit their monthly claim by 7th of the following month together with original receipts of transport cost.</span><br>
             <span>7. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.</span><br>
         </label>
         <br><br>
@@ -302,13 +302,13 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <font size="4">Transport for Medical Consultation</font>
             </span><br>
-            <span>1. Application is open to members with Muscular Dystrophy who needs to attend medical consultations due to muscular &nbsp;&nbsp;&nbsp;&nbsp;dystrophy or its related complications as certified by the doctor.  Medical appointments must be government recognized.</span><br>
-            <span>2. The Scheme will consider taxi/vehicle with hydraulic lift/ramp and ambulance but DO NOT obtain transportation &nbsp;&nbsp;&nbsp;&nbsp;subsidy from any other source.</span><br>
+            <span>1. Application is open to members with Muscular Dystrophy who needs to attend medical consultations due to muscular dystrophy or its related complications as certified by the doctor.  Medical appointments must be government recognized.</span><br>
+            <span>2. The Scheme will consider taxi/vehicle with hydraulic lift/ramp and ambulance but DO NOT obtain transportation subsidy from any other source.</span><br>
             <span>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.</span><br>
             <span>4. Applicant must be member of MDAS with no arrears of membership subscription fees.</span><br>
-            <span>5. Successful applicant must consider using MDAS vehicle for such trips, unless MDAS vehicle is not available or user &nbsp;&nbsp;&nbsp;&nbsp;requiring the use of ambulance facilities and equipment.</span><br>
+            <span>5. Successful applicant must consider using MDAS vehicle for such trips, unless MDAS vehicle is not available or user requiring the use of ambulance facilities and equipment.</span><br>
             <span>6. Application is subject to Committee’s decision, of which, the decision is final.</span><br>
-            <span>7. Successful applicant must submit their claim(s) by 7th of the following month together with original receipts of &nbsp;&nbsp;&nbsp;&nbsp;transport cost and certification of medical appointment(s).</span><br>
+            <span>7. Successful applicant must submit their claim(s) by 7th of the following month together with original receipts of transport cost and certification of medical appointment(s).</span><br>
             <span>8. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.</span>
         </label>
         <div>
