--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -1,4 +1,4 @@
-<form action="" method="" class="formSection" data-page-script="/assets/js/single-page/means-testdeclarationform.js" data-page-title="MDAS Means-Test Declaration Form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
+<form action="" method="" class="formSection" data-page-script="../assets/js/single-page/means-testdeclarationform.js" data-page-title="MDAS Means-Test Declaration Form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i> There are some errors in your form.</p>
   </div>
