--- a/src/pages/slickgrid.html
+++ b/src/pages/slickgrid.html
@@ -1,39 +1,37 @@
 <div id="pageContentWrapper" data-slickgrid="true" data-page-script="/assets/js/single-page/slick-grid-custom.js">
 
-<h1 id="pageTitle">SlickGrid</h1>
+	<h1 id="pageTitle">SlickGrid</h1>
 
-<div id="newbutton">
-	<a href='NewProject.aspx?PType=PJT' id="addnewproject" onclick="Utils.Popup(this,'width:750,height:530');return false;" >
-		New Project</a>
-  <a href='NewProject.aspx?PType=Sales' onclick="Utils.Popup(this,'width:750,height:530');return false;">
-			New Sale</a>
-</div>
-
-
-<div>
-  <div>
-		<label>Scope:</label>
-		<select id="Scope"></select>
+	<div class="form formRows">
+		<div class="row">
+			<a href='NewProject.aspx?PType=PJT' id="addnewproject" onclick="Utils.Popup(this,'width:750,height:530');return false;" >
+				New Project</a>
+		  <a href='NewProject.aspx?PType=Sales' onclick="Utils.Popup(this,'width:750,height:530');return false;">
+					New Sale</a>
+		</div>
+		<div class="row">
+		  <div>
+				<label for="Scope">Scope</label>
+				<select id="Scope"></select>
+			</div>
+			<div>
+				<label for="ProjectType">Project Type</label>
+				<select id="ProjectType"></select>
+			</div>
+			<div>
+				<label for="StatusFilter">Status</label>
+				<select id="StatusFilter"></select>
+			</div>
+			<div>
+				<label for="GenericFilter">ID/Title/Client</label>
+				<input type="text" id="GenericFilter" />
+			</div>
+		</div>
+		<footer>
+			<button id="BtnRefresh" onclick="RefreshGrid(); return false;">Refresh</button>
+		</footer>
 	</div>
-	<div>
-		<label>Project Type:</label>
-		<select id="ProjectType"></select>
-	</div>
-	<div>
-		<label>Status:</label>
-		<select id="StatusFilter"></select>
-	</div>
-	<div>
-		<label>ID/Title/Client:</label>
-		<input id="GenericFilter" />
-	</div>
-	<div>
-		<button id="BtnRefresh" onclick="RefreshGrid(); return false;">Refresh</button>
-	</div>
-</div>
 
-<div id="myGrid" class="GridDimensions"></div>
+	<div id="myGrid" class="GridDimensions"></div>
 
-
-</script>
 </div>
