--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -1,4 +1,4 @@
-<form action="" method="" data-page-script="/assets/js/single-page/initial-assesment-form.js" class="formSection" data-page-title="MDAS Means-Test Declaration Form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
+<form action="" method="" data-page-script="../assets/js/single-page/initial-assesment-form.js" class="formSection" data-page-title="initial-assesment-form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
     <div data-abide-error class="alert callout" style="display: none;">
         <p><i class="fi-alert"></i> There are some errors in your form.</p>
     </div>
@@ -28,11 +28,11 @@
             <input type="text" id="sectionA_GivenName" name="sectionA_GivenName"/>
         </div>
         <div>
-            <label for="sectionA_DisplayName">Display Name<span class="spanCss">*</span></label>
+            <label for="sectionA_DisplayName">Display Name warning</label>
             <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName"  required />
         </div>
         <div>
-            <label for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
+            <label for="sectionA_nric">NRIC / Birth Cert No.</label>
             <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required />
             <span class="form-error">Invalid NRIC</span>
         </div>
@@ -223,7 +223,7 @@
                 <label><input type="checkbox" name="sectionD_Precautions" id="sectionD_PrecautionsCardiac" value="Cardiac"> Cardiac</label>
                 <label><input type="checkbox" name="sectionD_Precautions" id="sectionD_PrecautionsChoking" value="Choking"> Choking</label>
                 <label><input type="checkbox" name="sectionD_Precautions" id="sectionD_PrecautionsRespiratory" value="Respiratory"> Respiratory</label>
-                <label><input type="checkbox" name="sectionD_Precautions" id="sectionD_PrecautionsOther" data-form-other="sectionD_PrecautionsOther" value="Others"> Other</label>
+                <label><input type="checkbox" name="sectionD_Precautions" id="sectionD_PrecautionsOther" data-form-other="sectionD_PrecautionsOthersText" value="Others"> Other</label>
                 <input type="text" id="sectionD_PrecautionsOthersText" name="sectionD_PrecautionsOthersText" placeholder="other" data-form-other-text="true" />
             </div>
         </div>
