--- a/src/pages/mdas/initialassesmentformListing.html
+++ b/src/pages/mdas/initialassesmentformListing.html
@@ -1,4 +1,4 @@
-<div id="pageContentWrapper" data-slickgrid="true" data-page-script="/assets/js/single-page/initialassesmentformListing.js">
+<div id="pageContentWrapper" data-slickgrid="true" data-page-script="/assets/js/single-page/initialassesmentformListing.js?a=0">
 
 <h1 id="pageTitle">initial-assesment-formListing</h1>
 <div id="newbutton">
@@ -10,11 +10,11 @@
 <div>
   <div>
 		<label>Display Name:</label>
-		<input type="text" id="DisplayName">
+		<select id="DisplayName"></select>
 	</div>
 	<div>
 		<label>NRIC:</label>
-		<input type="text" id="NRIC">
+		<select id="NRIC"></select>
 	</div>
 	<div>
 		<button id="BtnRefresh" onclick="RefreshGrid(); return false;">Refresh</button>
