--- a/src/pages/mdas/mdasmeanstestdeclarationformListing.html
+++ b/src/pages/mdas/mdasmeanstestdeclarationformListing.html
@@ -1,4 +1,4 @@
-<div id="pageContentWrapper" data-slickgrid="true" data-page-script="/assets/js/single-page/meanstestdeclarationformListing.js">
+<div id="pageContentWrapper" data-slickgrid="true" data-page-script="/assets/js/single-page/meanstestdeclarationformListing.js?a=0">
 
 <h1 id="pageTitle">MDAS Means-Test Declaration Listing</h1>
 <div id="newbutton">
