update inital html and js file

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -263,9 +263,9 @@
         </div>
         <div class="radioGroup">
             <label>Ramp used at home</label>
-            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampPortable" value="Yes"> Portable ramp</label>
-            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampBuilt" value="No"> Built-up ramp</label>
-            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampNone" value="No"> None</label>
+            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampPortable" value="Portable ramp"> Portable ramp</label>
+            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampBuilt" value="Built-up ramp"> Built-up ramp</label>
+            <label><input type="radio" name="sectionD_HomeRamp" id="sectionD_HomeRampNone" value="None"> None</label>
         </div>
         <div>
             <label><u>Toilet/Bathroom</u></label>
