update Acc js and ACC

--- a/src/pages/mdas/AccessibleTransitMobilityAssistance.html
+++ b/src/pages/mdas/AccessibleTransitMobilityAssistance.html
@@ -28,11 +28,11 @@
             <input type="text" id="sectionA_GivenName" name="sectionA_GivenName" />
         </div>
         <div>
-            <label class="labelText" for="sectionA_DisplayName">Display Name<span class="spanCss">*</span></label>
+            <label class="labelText" for="sectionA_DisplayName">Display Name<span class="error warning">*</span></label>
             <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName" />
         </div>
         <div>
-            <label class="labelText" for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
+            <label class="labelText" for="sectionA_nric">NRIC / Birth Cert No.<span class="error warning">*</span></label>
             <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" />
             <span class="form-error">Invalid NRIC</span>
         </div>
@@ -209,17 +209,17 @@
         <h3>Personal data protection act declaration</h3>
         <p>I fully understand and agree that the personal information which I have provided may be disclosed to other agencies or individuals as per the provisions of the Act.</p>
         <div>
-            <label class="labelText" for="sectionE_ProtectionDeclaration1"><input type="checkbox" id="sectionE_ProtectionDeclaration1" name="sectionE_ProtectionDeclaration"> Funding Application by relevant SG Enable / Government authorities / funding organisations.</label>
-            <label class="labelText" for="sectionE_ProtectionDeclaration2"><input type="checkbox" id="sectionE_ProtectionDeclaration2" name="sectionE_ProtectionDeclaration">Assessment by professionals of hospitals/service provider agencies/government authorities/vendors.</label>
-            <label class="labelText" for="sectionE_ProtectionDeclaration3"><input type="checkbox" id="sectionE_ProtectionDeclaration3" name="sectionE_ProtectionDeclaration">Use of photos/videos for public awareness for internal and external purposes.</label>
+            <label class="labelText" for="sectionE_ProtectionDeclaration1"><input type="checkbox" value="ProtectionCheck1" id="sectionE_ProtectionDeclaration1" name="sectionE_ProtectionDeclaration"> Funding Application by relevant SG Enable / Government authorities / funding organisations.</label>
+            <label class="labelText" for="sectionE_ProtectionDeclaration2"><input type="checkbox" value="ProtectionCheck2" id="sectionE_ProtectionDeclaration2" name="sectionE_ProtectionDeclaration">Assessment by professionals of hospitals/service provider agencies/government authorities/vendors.</label>
+            <label class="labelText" for="sectionE_ProtectionDeclaration3"><input type="checkbox" value="ProtectionCheck3" id="sectionE_ProtectionDeclaration3" name="sectionE_ProtectionDeclaration">Use of photos/videos for public awareness for internal and external purposes.</label>
         </div>
 
         <h3>Declaration by applicant/caregiver</h3>
         <p>Consent/Declaration must be signed by Main Applicant and/or the Ordinary Member.</p>
         <div>
-            <label class="labelText" for="sectionE_ApplicantDeclaration1"><input type="checkbox" id="sectionE_ApplicantDeclaration1" name="sectionE_ApplicantDeclaration"> I/We hereby declare that all the information provided in this application form is true, correct and accurate to the best of my knowledge. </label>
-            <label class="labelText" for="sectionE_ApplicantDeclaration2"><input type="checkbox" id="sectionE_ApplicantDeclaration2" name="sectionE_ApplicantDeclaration">I/We also understand that all information provided for the purpose of subsidy application will be kept confidential.</label>
-            <label class="labelText" for="sectionE_ApplicantDeclaration3"><input type="checkbox" id="sectionE_ApplicantDeclaration3" name="sectionE_ApplicantDeclaration">I/We understand and acknowledge that if any of the information provided in this form is false or inaccurate, I will be liable to repay in full any subsidy and financial assistance granted inclusive of all administrative expenses, and/or denied future financial assistance for a stipulated period of time set by the Association.</label>
+            <label class="labelText" for="sectionE_ApplicantDeclaration1"><input type="checkbox" value="ProtectionCheck4" id="sectionE_ApplicantDeclaration1" name="sectionE_ApplicantDeclaration"> I/We hereby declare that all the information provided in this application form is true, correct and accurate to the best of my knowledge. </label>
+            <label class="labelText" for="sectionE_ApplicantDeclaration2"><input type="checkbox" value="ProtectionCheck5"id="sectionE_ApplicantDeclaration2" name="sectionE_ApplicantDeclaration">I/We also understand that all information provided for the purpose of subsidy application will be kept confidential.</label>
+            <label class="labelText" for="sectionE_ApplicantDeclaration3"><input type="checkbox" value="ProtectionCheck6"id="sectionE_ApplicantDeclaration3" name="sectionE_ApplicantDeclaration">I/We understand and acknowledge that if any of the information provided in this form is false or inaccurate, I will be liable to repay in full any subsidy and financial assistance granted inclusive of all administrative expenses, and/or denied future financial assistance for a stipulated period of time set by the Association.</label>
         </div>
         <p>I/We hereby confirm that I/We understand and agree to all the provisions in this form.</p>
         <h3>MAIN APPLICANT</h3>
