update slickgrid helper, target url. add moment module

--- a/src/pages/slickgrid2.html
+++ b/src/pages/slickgrid2.html
@@ -5,12 +5,12 @@
 	<div class="form formRows">
 		<div class="row">
 		  <div>
-				<label for="displayName">Display Name</label>
-				<input type="text" id="displayName" name="displayName" />
+				<label for="DisplayName">Display Name</label>
+				<input type="text" id="DisplayName" name="DisplayName" />
 			</div>
 			<div>
-				<label for="nric">NRIC</label>
-				<select id="nric"></select>
+				<label for="QueryNRIC">NRIC</label>
+				<select id="QueryNRIC" name="QueryNRIC"></select>
 			</div>
 		</div>
 		<footer>
