--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -132,7 +132,7 @@
   <section id="activityLog">
     <header class="grid-x">
       <h2 class="cell auto">Activity Log</h2>
-      <button type="button" class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="activityForm">Add New Activity</button>
+      <button id="AddNewActivity" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="activityForm">Add New Activity</button>
     </header>
     <div class="threadContainer" id="logThread">
       <div class="scrollContainer scrollY threadLog">
