--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -374,7 +374,7 @@
       </label>
     </div>
   </div>
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x" style="display:none">
     <div class="cell small-12 medium-4">
       <label>
         Assurance Plus
