update lable name

--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -8,7 +8,7 @@
 </section>
 <section id="packageContainer" class="toggleBox clientView" style="display:none">
   <header class="grid-x toggleTitle">
-    <h2 class="cell auto">Product Owned</h2>
+    <h2 class="cell auto">Package(s)</h2>
   </header>
   <div class="toggleContent">
     <div class="scrollContainer scrollY">
