--- a/src/pages/slickgrid.html
+++ b/src/pages/slickgrid.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 		<footer>
-			<button id="BtnRefresh" onclick="RefreshGrid(); return false;">Refresh</button>
+			<button id="BtnRefresh" onclick="refreshGrid(); return false;">Refresh</button>
 		</footer>
 	</div>
 
