created script to load form with json objects and retrieve values in json type

--- a/src/pages/slickgrid.html
+++ b/src/pages/slickgrid.html
@@ -2,7 +2,7 @@
 
 	<h1 id="pageTitle">SlickGrid</h1>
 
-	<div class="form formRows">
+	<div id="slickGridFormContainer" class="form formRows">
 		<div class="row">
 		  <div>
 				<label for="Scope">Scope</label>
