--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -184,7 +184,7 @@
 
 <section id="userContainer" class="adminView" style="display:none">
   <header class="grid-x">
-    <h2 class="cell auto">User(s)</h2>
+    <h2 class="cell auto">Organisation(s)</h2>
   </header>
   <div id='userFilter' class="userFilter tabBoxContainer">
     <button class="button button3 tabBoxButton" data-target="userFilterForm" ><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filter</button>
@@ -201,7 +201,7 @@
         </div>
         <div class="cell small-12 medium-6">
           <label>
-          NRIC/UEN
+          NRIC
           <input type="text" id="entityKey" name="entityKey" />
           </label>
         </div>
@@ -230,7 +230,7 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>NRIC/UEN</th>
+          <th>NRIC</th>
           <th>Contact No.</th>
           <th>Email</th>
           <th>Address</th>
@@ -325,7 +325,7 @@
 </form>
 <form id="packageAddForm" class="reveal lightBg" data-reveal >
   <header onloadedmetadata="" class="grid-x grid-padding-x">
-    <h3 class="cell">New Product</h3>
+    <h3 class="cell">New Package</h3>
     <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
     </button>
@@ -353,10 +353,18 @@
         Package Type <span style="color:red">*</span>
         <select id="type" name="type">
           <option value="">-- Please Select --</option>
-          <option value="Maintenance">Support Mantainance</option>
+          <option value="Maintenance">Mantainance & Support </option>
           <option value="Assurance">Assurance</option>
           <option value="AssurancePlus">Assurance Plus</option>
         </select>
+      </label>
+    </div>
+  </div>
+  <div class="grid-x grid-padding-x">
+    <div class="cell">
+      <label>
+      Quantity <span style="color:red">*</span>
+      <input type="number" id="quantity" name="quantity"/>
       </label>
     </div>
   </div>
@@ -394,7 +402,7 @@
     </div>
   </div>
   <footer class="grid-x grid-margin-x">
-    <button type="button" id="submit" data-close class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
+    <button type="button" id="submit"  class="cell small-12 medium-offset-4 medium-4 newPackagaSubmitButton">Submit</button>
   </footer>
 </form>
 <form id="newUserForm" class="reveal lightBg" data-reveal >
