--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -167,7 +167,7 @@
         </label>
       </div>
     </div>
-    <div class="grid-x grid-padding-x">
+    <div class="grid-x grid-padding-x" style="display:none">
       <div class="cell">
         <label>
         Task <span style="color:red">*</span>
@@ -284,7 +284,7 @@
         </div>
       </div>
     </div>
-    <div class="grid-x grid-padding-x">
+    <div class="grid-x grid-padding-x" style="display:none">
       <div class="cell small-12 medium-6">
         <div class="cell">
           <label>
