--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -197,12 +197,15 @@
     <div style="display:none" class="grid-x grid-padding-x internalCheckBox supportControl">
       <div class="cell">
         <label class="callout calloutInline calloutNeutral">
-        <input type="checkbox" id="internal" name="internal" />
+        <input type="radio" id="internal" name="internal"  value="1"/>
         Internal</label>
+        <label class="callout calloutInline calloutNeutral">
+        <input type="radio" id="internalAll" name="internal" value="0"/>
+        All</label>
       </div>
     </div>
     <footer class="grid-x grid-margin-x">
-      <button type="button" id="submit" data-close class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
+      <button type="button" id="submit"  class="btn cell small-12 medium-4 medium-offset-4">Submit</button>
     </footer>
   </form>
   <form id="chargeForm" class="reveal lightBg" data-reveal>
