--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -383,7 +383,7 @@
     <div class="cell">
       <label>
       Quantity <span style="color:red">*</span>
-      <input type="number" id="quantity" name="quantity"/>
+      <input type="number" id="quantity" name="quantity" value="1"/>
       </label>
     </div>
   </div>
