--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -135,7 +135,7 @@
       <button id="AddNewActivity" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="activityForm">Add Case Remarks</button>
     </header>
     <div class="threadContainer" id="logThread">
-      <div class="scrollContainer scrollY threadLog">
+      <div class="scrollContainer scrollY threadLog" style="height:480px">
         <!--Log thread insert here-->
         <div class="thread">
           <div class="top"><span class="datetime">1 jan 2018<i> 13:00</i> by Security Admin</span> <span class="tag">Internal</span></div>
@@ -287,7 +287,7 @@
         </div>
       </div>
     </div>
-    <div class="grid-x grid-padding-x" style="display:none">
+    <div class="grid-x grid-padding-x" >
       <div class="cell small-12 medium-6">
         <div class="cell">
           <label>
@@ -296,7 +296,7 @@
           </label>
         </div>
       </div>
-      <div class="cell small-12 medium-6">
+      <div class="cell small-12 medium-6" style="display:none">
         <div class="cell">
           <label>
           Actual Man-hour(s)
