update username function

--- a/src/pages/Ticketing/profile.html
+++ b/src/pages/Ticketing/profile.html
@@ -1,11 +1,12 @@
+<small><a href="../Ticketing/TicketingHome.html">[Back]</a></small>
 <div id="profileContainer" class="contentContainer">
   <header>
     <h1>
-      Profile <small><a href="#" class="editLinkForm" data-content="password" data-text="Change Username/Password"></a></small>
+      Profile <small><a href="#" class="editLinkForm" data-content="password" data-text="Change Password"></a></small>
     </h1>
   </header>
   <form id="passwordForm" class="grid-container fluid">
-    <div class="grid-x grid-padding-x">
+    <div class="grid-x grid-padding-x" style="display:none">
       <div class="cell medium-3">
         <label for="newUserName">
           New Username <span style="color:red"><br>* Key In only if you wish to change username</span>
