update small function

--- a/src/pages/Ticketing/TicketingHome.html
+++ b/src/pages/Ticketing/TicketingHome.html
@@ -185,15 +185,20 @@
       </footer>
     </form>
   </div>
-  <div class="scrollContainer scrollY">
+  <div class="scrollContainer">
     <table class="caseTable">
       <thead>
         <tr>
           <th colspan="2">Subject</th>
+          <th>Case ID#</th>
+          <th>Package Type</th>
           <th>Type</th>
           <th>Organisation</th>
           <th>Created Date</th>
+          <th>Schedule From Date</th>
+          <th>Schedule To Date</th>
           <th>Status</th>
+          <th>Involvement</th>
         </tr>
       </thead>
       <tbody>
@@ -378,7 +383,7 @@
   <div class="grid-x grid-padding-x">
     <div class="cell">
       <label>
-      Product
+      Product<span style="color:red">*</span>
       <select id="product" name="product">
       </select>
       </label>
