--- a/src/pages/Ticketing/case.html
+++ b/src/pages/Ticketing/case.html
@@ -102,7 +102,7 @@
           <span class="manHours">
           </span>
         </div>
-        <div class="cell  small-12 medium-6 ">
+        <div class="cell  small-12 medium-6 " style="display:none">
           <b>Actual Hour(s)</b>
           <span class="actualHour">
           </span>
@@ -116,7 +116,7 @@
       <button type="button" style="display:none" class="buttonType2 buttonType2Add cell medium-3 text-right teamLeadControl"  data-open="involvementForm">Add Involvement</button>
     </header>
     <div class="threadContainer" id="taskThread">
-      <div class="scrollContainer scrollY threadTask">
+      <div class="scrollContainer threadTask">
         <!--Task thread insert here-->
         <!--
         <div class="thread">
@@ -135,7 +135,7 @@
       <button id="AddNewActivity" type="button" class="buttonType2 buttonType2Add cell medium-3 text-right"  data-open="activityForm">Add Case Remarks</button>
     </header>
     <div class="threadContainer" id="logThread">
-      <div class="scrollContainer scrollY threadLog" style="height:480px">
+      <div class="scrollContainer threadLog" >
         <!--Log thread insert here-->
         <div class="thread">
           <div class="top"><span class="datetime">1 jan 2018<i> 13:00</i> by Security Admin</span> <span class="tag">Internal</span></div>
